fixes % spacing on calc for browsers default arrows

--- a/wp-content/themes/connectIN/styles/wheat-profit-calculator.css
+++ b/wp-content/themes/connectIN/styles/wheat-profit-calculator.css
@@ -503,7 +503,7 @@ YIELD CALCULATIONS FORM
 span.suffix {
   position: absolute;
   top: 34px;
-  right: 20px;
+  right: 29px;
 }
 
 select::-ms-expand {
